test/type_inference/negative/type_args5.impala
fn f[A](a: fn() -> (), g: fn[B](B, A) -> B) -> () {
}

fn main() -> () {
    f(|| {}, |b, a| { b });
}

