test/type_inference/negative/type_args5.output
type_args5.impala:5 col 5 - 26: error: could not find instance for type variable 'A' of function 'f'
